update for main

--- a/LaserRadar/Robot/app/src/main/res/layout/activity_command_config.xml
+++ b/LaserRadar/Robot/app/src/main/res/layout/activity_command_config.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@color/white"
+    android:background="#EEEEEE"
     tools:context="com.android.jdrd.robot.activity.MainActivity">
     <RelativeLayout
         android:id="@+id/main"
@@ -56,6 +56,7 @@
                 android:id="@+id/linear_goal"
                 android:orientation="vertical"
                 android:layout_width="match_parent"
+                android:background="@color/white"
                 android:layout_height="60dp">
                 <RelativeLayout
                     android:orientation="horizontal"
@@ -88,6 +89,7 @@
             <LinearLayout
                 android:id="@+id/linear_direction"
                 android:orientation="vertical"
+                android:background="@color/white"
                 android:layout_width="match_parent"
                 android:layout_height="60dp">
                 <View
@@ -125,6 +127,7 @@
             <LinearLayout
                 android:id="@+id/linear_speed"
                 android:orientation="vertical"
+                android:background="@color/white"
                 android:layout_width="match_parent"
                 android:layout_height="60dp">
                 <View
@@ -163,6 +166,7 @@
                 android:id="@+id/linear_mp3"
                 android:orientation="vertical"
                 android:layout_width="match_parent"
+                android:background="@color/white"
                 android:layout_height="60dp">
                 <View
                     android:layout_width="match_parent"
@@ -198,6 +202,7 @@
             <LinearLayout
                 android:id="@+id/linear_outime"
                 android:orientation="vertical"
+                android:background="@color/white"
                 android:layout_width="match_parent"
                 android:layout_height="60dp">
                 <View
@@ -234,6 +239,7 @@
             <LinearLayout
                 android:id="@+id/linear_shownum"
                 android:orientation="vertical"
+                android:background="@color/white"
                 android:layout_width="match_parent"
                 android:layout_height="60dp">
                 <View
@@ -271,6 +277,7 @@
                 android:id="@+id/linear_showcolor"
                 android:orientation="vertical"
                 android:layout_width="match_parent"
+                android:background="@color/white"
                 android:layout_height="60dp">
                 <View
                     android:layout_width="match_parent"
@@ -306,7 +313,7 @@
             <Button
                 android:layout_marginTop="15dp"
                 android:id="@+id/btn_sure"
-                android:layout_width="200dp"
+                android:layout_width="100dp"
                 android:layout_gravity="center"
                 android:background="@color/white"
                 android:text="@string/btn_sure"
