--- a/LaserRadar/Robot/app/src/main/res/drawable/btn_qianjin_selector.xml
+++ b/LaserRadar/Robot/app/src/main/res/drawable/btn_qianjin_selector.xml
@@ -2,6 +2,6 @@
 <selector
     xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_pressed="true"
-        android:drawable="@mipmap/up_pre" />
-    <item android:drawable="@mipmap/up_no" />
+        android:drawable="@mipmap/qianjin_pre" />
+    <item android:drawable="@mipmap/qianjin_no" />
 </selector>
