--- a/LaserRadar/Robot/app/src/main/res/layout/item.xml
+++ b/LaserRadar/Robot/app/src/main/res/layout/item.xml
@@ -5,7 +5,7 @@
     android:orientation="vertical"
     android:gravity="center"
     >
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
         android:orientation="vertical"
         android:layout_gravity="center"
@@ -14,18 +14,19 @@
         <ImageView
             android:id="@+id/image"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_gravity="center"
+            android:layout_centerInParent="true"
             />
         <TextView
             android:id="@+id/name"
             android:layout_centerInParent="true"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:gravity="center"
-            android:textColor="@color/black"
+            android:textColor="@color/white"
             android:textSize="25sp"
             android:layout_height="match_parent" />
-    </LinearLayout>
+    </RelativeLayout>
     <TextView
         android:id="@+id/text"
         android:layout_marginTop="9dp"
@@ -36,6 +37,6 @@
         android:layout_gravity="center"
         android:gravity="center"
         android:textSize="13sp"
-        android:textColor="#666666"
+        android:textColor="@color/white"
         />
 </LinearLayout>
