--- a/LaserRadar/Robot/app/src/main/res/layout/activity_config.xml
+++ b/LaserRadar/Robot/app/src/main/res/layout/activity_config.xml
@@ -41,9 +41,6 @@
             android:text="@string/btn_delete"/>
     </RelativeLayout>
 
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
         <LinearLayout
             android:orientation="vertical"
             android:layout_width="match_parent"
@@ -116,228 +113,38 @@
                 android:layout_height="0.5dp"/>
             <LinearLayout
                 android:orientation="horizontal"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="@dimen/desk_text_height">
                 <TextView
-                    android:layout_width="match_parent"
+                    android:id="@+id/tv01"
+                    android:layout_weight="1"
+                    android:layout_width="0dp"
                     android:gravity="center"
                     android:textColor="@color/black"
                     android:layout_height="match_parent"
                     android:text="@string/command_settings"
                     android:textSize="18sp"
                     />
-            </LinearLayout>
-            <View
-                android:layout_width="match_parent"
-                android:background="#EEEEEE"
-                android:layout_height="0.5dp"/>
-            <LinearLayout
-                android:orientation="vertical"
-                android:background="@color/white"
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/desk_height">
-                <RelativeLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content">
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:gravity="center_vertical"
-                        android:text="@string/straight"
-                        android:textColor="@color/black"
-                        android:textSize="25sp" />
-
-                    <Button
-                        android:id="@+id/straight"
-                        android:layout_width="@dimen/add_width"
-                        android:layout_height="@dimen/add_height"
-                        android:layout_centerVertical="true"
-                        android:background="@drawable/btn_add_selector"
-                        android:layout_alignParentRight="true"
-                        />
-                </RelativeLayout>
-
-                <View
-                    android:layout_width="match_parent"
-                    android:layout_height="0.5dp"/>
-            </LinearLayout>
-            <View
-                android:layout_width="match_parent"
-                android:background="#EEEEEE"
-                android:layout_height="0.5dp"/>
-            <LinearLayout
-                android:orientation="vertical"
-                android:layout_width="match_parent"
-                android:background="@color/white"
-                android:layout_height="@dimen/desk_height">
-                <RelativeLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content">
-
-                    <Button
-                        android:id="@+id/derail"
-                        android:layout_width="@dimen/add_width"
-                        android:layout_height="@dimen/add_height"
-                        android:background="@drawable/btn_add_selector"
-                        android:layout_centerVertical="true"
-                        android:layout_alignParentRight="true"
-                        />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:text="@string/derail"
-                        android:textColor="@color/black"
-                        android:gravity="center"
-                        android:textSize="25sp"
-                        android:layout_alignParentTop="true"
-                        android:layout_alignParentLeft="true"
-                        android:layout_alignParentStart="true"
-                        android:id="@+id/textView5" />
-                </RelativeLayout>
-            </LinearLayout>
-            <View
-                android:layout_width="match_parent"
-                android:background="#EEEEEE"
-                android:layout_height="0.5dp"/>
-            <LinearLayout
-                android:orientation="vertical"
-                android:layout_width="match_parent"
-                android:background="@color/white"
-                android:layout_height="@dimen/desk_height">
-
-                <RelativeLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content">
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:text="@string/rotato"
-                        android:textColor="@color/black"
-                        android:gravity="center"
-                        android:textSize="25sp"
-                        />
-                    <Button
-                        android:id="@+id/rotato"
-                        android:layout_width="@dimen/add_width"
-                        android:layout_height="@dimen/add_height"
-                        android:background="@drawable/btn_add_selector"
-                        android:layout_centerVertical="true"
-                        android:layout_alignParentRight="true"
-                        />
-                </RelativeLayout>
-            </LinearLayout>
-            <View
-                android:layout_width="match_parent"
-                android:background="#EEEEEE"
-                android:layout_height="0.5dp"/>
-            <LinearLayout
-                android:orientation="vertical"
-                android:layout_width="match_parent"
-                android:background="@color/white"
-                android:layout_height="@dimen/desk_height">
-                <RelativeLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content">
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:text="@string/wait"
-                        android:textColor="@color/black"
-                        android:gravity="center"
-                        android:textSize="25sp"
-                        />
-                    <Button
-                        android:id="@+id/wait"
-                        android:layout_width="@dimen/add_width"
-                        android:layout_height="@dimen/add_height"
-                        android:background="@drawable/btn_add_selector"
-                        android:layout_centerVertical="true"
-                        android:layout_alignParentRight="true"
-                        />
-                </RelativeLayout>
-            </LinearLayout>
-            <LinearLayout
-                android:orientation="vertical"
-                android:layout_width="match_parent"
-                android:visibility="gone"
-                android:layout_height="@dimen/desk_height">
-                <View
-                    android:layout_width="match_parent"
-                    android:layout_height="0.5dp"/>
-                <RelativeLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content">
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:text="@string/puthook"
-                        android:textColor="@color/black"
-                        android:gravity="center"
-                        android:textSize="25sp"
-                        />
-                    <Button
-                        android:id="@+id/puthook"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:background="@drawable/btn_add_selector"
-                        android:layout_centerVertical="true"
-                        android:layout_alignParentRight="true"
-                        />
-                </RelativeLayout>
-            </LinearLayout>
-            <LinearLayout
-                android:orientation="vertical"
-                android:layout_width="match_parent"
-                android:visibility="gone"
-                android:layout_height="@dimen/desk_height">
-                <View
-                    android:layout_width="match_parent"
-                    android:layout_height="0.5dp"/>
-                <RelativeLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content">
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:text="@string/lockhook"
-                        android:textColor="@color/black"
-                        android:gravity="center"
-                        android:textSize="25sp"
-                        />
-                    <Button
-                        android:id="@+id/lockhook"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:background="@drawable/btn_add_selector"
-                        android:layout_centerVertical="true"
-                        android:layout_alignParentRight="true"
-                        />
-                </RelativeLayout>
-            </LinearLayout>
-            <LinearLayout
-                android:orientation="horizontal"
-                android:layout_width="wrap_content"
-                android:layout_height="@dimen/desk_text_height">
                 <TextView
-                    android:layout_width="match_parent"
-                    android:gravity="center"
+                    android:id="@+id/tv02"
+                    android:layout_width="0dp"
                     android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:gravity="center"
                     android:text="@string/added_settings"
-                    android:textSize="25sp"
-                    android:textColor="@color/black"
-                    />
+                    android:textSize="18sp" />
             </LinearLayout>
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:orientation="vertical"
-                android:layout_height="wrap_content">
-                <ListView
-                    android:id="@+id/added_command"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
-                </ListView>
-            </LinearLayout>
+            <ImageView
+                android:id="@+id/iv_tab_bottom_img"
+                android:layout_width="wrap_content"
+                android:layout_height="2dp"
+                android:scaleType="matrix"
+                android:src="@mipmap/huakuai01" />
         </LinearLayout>
-    </ScrollView>
+    <android.support.v4.view.ViewPager
+        android:id="@+id/vPager"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_gravity="center"
+        android:background="#ffffff" />
 </LinearLayout>
