--- a/LaserRadar/Robot/app/src/main/res/layout/tab_02.xml
+++ b/LaserRadar/Robot/app/src/main/res/layout/tab_02.xml
@@ -5,14 +5,9 @@
     android:orientation="vertical"
     android:background="@color/white"
     >
-        <TextView
-            android:text="@string/add_area"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
         <ListView
             android:id="@+id/added_command"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
-        </ListView>
+            android:layout_height="match_parent"/>
 
 </LinearLayout>
