--- a/LaserRadar/Robot/app/src/main/res/values/styles.xml
+++ b/LaserRadar/Robot/app/src/main/res/values/styles.xml
@@ -28,7 +28,8 @@
         <!--<item name="android:backgroundDimEnabled">true</item>-->
         <item name="android:windowIsTranslucent">true</item>
         <item name="android:windowIsFloating">true</item>
-        <!--<item name="android:windowBackground">@android:color/transparent</item>-->
+        <item name="android:backgroundDimEnabled">true</item>
+        <item name="android:windowBackground">@android:color/transparent</item>
 
     </style>
 </resources>
